<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/page_1"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_label_1"
        android:enabled="true"
        />
    <item
        android:id="@+id/page_2"
        android:icon="@drawable/ic_book_black_40dp"
        android:title="@string/menu_label_2"
        android:enabled="true"
       />
    <item
        android:id="@+id/page_3"
        android:icon="@drawable/ic_play_circle_outline_black_40dp"
        android:title="@string/menu_label_3"
        android:enabled="true"
        />
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_40dp"
        android:title="@string/menu_label_4"/>

</menu>