<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:layout_centerHorizontal="true"
    android:paddingStart="20dp"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/selectLevel"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lvl_1"
            android:text="@string/lvl_1"
            android:checked="true"
            android:textSize="25sp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lvl_2"
            android:text="@string/lvl_2"
            android:textSize="25sp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lvl_3"
            android:text="@string/lvl_3"
            android:textSize="25sp" />
    </RadioGroup>
    <Button
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_lvl"
        android:background="@drawable/btn_style"
        android:textColor="@color/White"
        app:layout_constraintTop_toBottomOf="@+id/selectLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="NEXT"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>