<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn_style"
    tools:context=".QuizsupportActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar_q1"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/White"
        android:elevation="4dp"
        app:title="Quiz"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/orenge_button"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="380dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/toolbar_q1"
        android:layout_height="530dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Question?"
                    android:gravity="center"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="center">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/selectAns1"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textView"
                    >
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/a_1"
                        android:text="@string/lvl_1"
                        android:checked="true"
                        android:textSize="25sp" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/a_2"
                        android:text="@string/lvl_2"
                        android:layout_marginTop="20dp"
                        android:textSize="25sp" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/a_3"
                        android:text="@string/lvl_3"
                        android:layout_marginTop="20dp"
                        android:textSize="25sp" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:id="@+id/a_4"
                        android:text="@string/lvl_3"
                        android:textSize="25sp" />
                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_sub1"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/selectAns1"
                    android:background="@drawable/btn_style"
                    android:text="SUBMIT"
                    android:textColor="@color/White" />
            </LinearLayout>
            <TextView
                android:id="@+id/txt_timer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@color/orenge_button"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>